# starknet-founders-bot-v2

./: .cursorignore  .env.example  .gitignore  DEPLOYMENT.md  README.md  WEBHOOK_DEPLOYMENT.md  generate-context.sh  main.py  pyproject.toml  render.yaml  requirements.txt  telegram-bot-context-prompt-20250807-1455.txt  telegram-bot-context-prompt-20250807-1836.txt  telegram-bot-context-prompt-20250807-1950.txt  telegram-bot-context-prompt-20250807-2026.txt  telegram-bot-context-prompt-20250810-2224.txt  telegram-bot-context-prompt-20250810-2312.txt  telegram-bot-context-prompt-20250811-1414.txt  telegram-bot-context-prompt-20250811-1515.txt  telegram-bot-context-prompt-20250811-1523.txt
migrations/: 001_initial_schema.sql  002_analytics_table.sql  003_conversation_summaries.sql  004_user_queries_view.sql  005_user_qna_view.sql
scripts/: analytics_report.py  basic_analytics_report.py  export_user_qna.py  export_user_queries.py  run_migrations.py  test_datetime_fix.py  test_enhanced_bot.py  test_openrouter.py  test_supabase.py  test_telegram_bot.py
src/bot/: __init__.py  __main__.py  agents.py  config.py  database.py  exporters.py  handlers.py  main.py  middleware.py  utils.py  webhook_main.py
tests/: test_database.py
